refactor(http): Improve routing and request body size handling
- Refactored HTTP routing to use method-specific handlers (Get, Post, Delete).
- Introduced `MAX_REQUEST_BODY_SIZE` configuration for upload requests.
- Renamed `MAX_MULTIPART_MEMORY_MB` to `MAX_MULTIPART_MEMORY`.
- Removed explicit HTTP method checks from individual handlers.
- Removed the `/ping` endpoint.

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ HTTP_READ_HEADER_TIMEOUT=2
 HTTP_IDLE_TIMEOUT=60
 
 STORAGE_LOCAL_PATH="uploads"
-MAX_MULTIPART_MEMORY_MB=10
-
+MAX_REQUEST_BODY_SIZE=20
+MAX_MULTIPART_MEMORY=8
