feat: Implement nested paths and upload destination
This commit introduces support for nested file paths in storage operations and allows users to specify a destination subdirectory during file uploads.

- **`internal/http/router/router.go`**: Updated routes for GET (Download) and DELETE operations to use the `*` wildcard, enabling handling of nested paths (e.g., `/public/dir/subdir/file.txt`).
- **`internal/http/handlers/delete.go`**, **`internal/http/handlers/download.go`**: Modified to use `chi.URLParam(r, "*")` to correctly retrieve full file paths, including directories.
- **`internal/http/handlers/upload.go`**: Added logic to process an optional `destination` form value. Files can now be uploaded to specified subdirectories, with path cleaning and validation to prevent invalid or absolute paths.
- **`.env.example`**: Updated `STORAGE_LOCAL_PATH` example for clarity.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ HTTP_WRITE_TIMEOUT=10
 HTTP_READ_HEADER_TIMEOUT=2
 HTTP_IDLE_TIMEOUT=60
 
-STORAGE_LOCAL_PATH="uploads"
+STORAGE_LOCAL_PATH="/path/to/your/storage"
 MAX_REQUEST_BODY_SIZE=20
 MAX_MULTIPART_MEMORY=8
 
